# kvstore

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
skills/kvstore-wcrud/: SKILL.md
skills/kvstore-wcrud/agents/: openai.yaml
src/: cli.rs  db.rs  interactive.rs  lib.rs  main.rs  settings.rs  storage.rs  store.rs
