[package]
name = "kvstore"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
fuzzy-matcher = "0.3"
crossterm = "0.29"
rusqlite = { version = "0.38", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
simplelog = "0.12"
toml = "1.0"

[dev-dependencies]
tempfile = "3"
